<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jeroen.restaurantbestelling.MainActivity">

    <Button
        android:id="@+id/knop1"
        android:text="@string/_07_11_oktober"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dagSelectieClick"/>
    <Button
        android:id="@+id/knop2"
        android:text="@string/_14_18_oktober"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/knop3"
        android:text="@string/_21_25_oktober"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
